tooling/nargo_cli/tests/snapshots/execution_success/wildcard_type/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "enable",
        "type": {
          "kind": "array",
          "length": 2,
          "type": {
            "kind": "field"
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "array",
        "length": 4,
        "type": {
          "kind": "field"
        }
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _5",
    "private parameters indices : [_0, _1]",
    "public parameters indices : []",
    "return value indices : [_2, _3, _4, _5]",
    "EXPR [ (-1, _1) (1, _2) 0 ]",
    "EXPR [ (-1, _1) (1, _3) -7 ]",
    "EXPR [ (-1, _1) (1, _4) -3 ]",
    "EXPR [ (-1, _1) (1, _5) 1 ]"
  ],
  "debug_symbols": "ndLRCoMgFAbgd/G6i2nqolcZI6xOIYiJaTCid5+FtjYIRld6/P0OHHRGLdS+r6TuhhGVjxnVViol+0oNjXBy0OF0XjKUyspZgHCEDnlQRljQDpXaK5WhSSi/XRqN0NvqhA3pLUOg27CGhp1UsO6W7KNv5xQXecS4oDtn//s72T0/8+TcU8qjpwxf8Iyk4RlhFzzHOHqO+YX5SV5ET2j+5Z+hEo20vy8+CStFrSCWndfNIXUvk5L0Y4wdGmi9hbXTloXebw==",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
