tooling/nargo_cli/tests/snapshots/execution_success/wildcard_type/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "enable",
        "type": {
          "kind": "array",
          "length": 2,
          "type": {
            "kind": "field"
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "array",
        "length": 4,
        "type": {
          "kind": "field"
        }
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : 5",
    "private parameters indices : [0, 1]",
    "public parameters indices : []",
    "return value indices : [2, 3, 4, 5]",
    "EXPR [ (-1, _1) (1, _2) 0 ]",
    "EXPR [ (-1, _1) (1, _3) -7 ]",
    "EXPR [ (-1, _1) (1, _4) -3 ]",
    "EXPR [ (-1, _1) (1, _5) 1 ]"
  ],
  "debug_symbols": "XYxLCoAwDAXvkrUn8Coi0k9aAqEpsRWk9O5+cCFdzhveNPBoa9woBdlhXhqwOFNI0k2tT2CVmCluw3wYJWMZPww1uZ8tZ8bhn1Uc+qr4lF7X134B",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
