tooling/nargo_cli/tests/snapshots/execution_success/wildcard_type/execute__tests__force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "enable",
        "type": {
          "kind": "array",
          "length": 2,
          "type": {
            "kind": "field"
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "array",
        "length": 4,
        "type": {
          "kind": "field"
        }
      },
      "visibility": "public"
    },
    "error_types": {
      "12049594436772143978": {
        "error_kind": "string",
        "string": "array ref-count underflow detected"
      },
      "14225679739041873922": {
        "error_kind": "string",
        "string": "Index out of bounds"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/9VazW7jRgymHEmxJMtW2vsCvbU9yX9xjjr0RbRO8xx6vQJF7731DXppgQX2sJvJDhXqE614I3GdJWCMNKTIjz9D26MJ6AtFj5/AX4d+DMQ4oy4xr/JjOY7WE+oqrTAGE2KUseV4uxhf+fuIxCQ6RC89JGRv/EUC+gL/XDVRcBKwO6X+u3JXJ9SlifFvE+oW+sT6N4nQaaC/vPZ6fmue9aMvXAcBmeVpZ+znJqd+QwrAt9CoRgKwR+Angf2UTGtqHYA9xoPx4eucZZpnPAHwwqbvB/OipuuHo/nj552Qw9qaCblfxPWv1MUwU3wIFB8s6+uxfm+Na2in5QDzEzZd25IncxCKeL6D+FjUnIyP0fre/UinexfXw3VDLV1BPGWMOGZzKQ+8RPDCpmsn9fehsCN1MY4I5H/29ys/xuIZfr5Q7Mdgv4NbmZMxQl1XyhzLx4+fn/x15j+uhv7lZ6gbd0eVH8uRxD1C9izs35GYn7C29uf27zafZNoL2v4dAR6Mj+wPjhcrWAuFJ32TPGknVux8j7py6tdscGIk6uddsyNlOB/G3w+boZhovzFW1F8zMWBF/6tpsK4T6udjQv1tr7gWscBeMbfJw9m9gu2ngNWqV8wBD8YHe0WiYC0UXgDXiWInUexY64oNdGHtOKr8WI6jNSmYcH2yXc5RCrISYybmL/Ffhu2ngNWqvjPAg/HB+l4oWAuFJ+MvedLOQrGj6UoAA+aayDx/+9fmL7HBM5g/bX1+bf6wp4zJX/zGdWHtOKr8WI6jDSmYcH1k9jgObCs/A0eu4MB1thTzl+iTbD8l03XfrrMl4MH44DpbKVgLhYdrbqXYWSl2NF05YMCac5SA7KX6JNtPlThY5C9X4qr1CY7dUsFaKDzsk1qdLBU71rpiA1xYO44qP5bjaEsKJuxPuT2OPdtanYEjJ72nSoyFmL9En2T7KZmu+3adFYAH44Pr7EbBWig8rMcbxc6NYkfTtQIMWHOOEur310v0Sbafkun37nro+0frExy7QsFaKDzsR1qdFIqd71EX7tM4qvxYjqMd2xrqTzHw0Meh/8baO23jvZ+zexnu/RjtWw/u/cj4DK0F3PvR1ollzU0ck3ZvUMbkG/XK+9f2SqN6HeyVMj6v7ZVyT3NsfaQT6pqyVyYT6sreqI+LCXXlb9TH5YS6IgMfjd9xtu9kjN5DtOd7jPYRt3i+R8bOjX9ATpgXUf/si4xDBPJ/CZ1/+uuV0Ct9c5QpNmcnbGIvkfvX+H5TqzNtD1Xr4yyv7TnKHpSCf9L2AniyP5/aj5w45yX6Eb7gx4z6/UzGIIK5v/3oYvg/dWOn5UZ736C9e07hOYkHz2agbpSX73gXwg/tufCEn/8IPz9Q109tv0l7x87y2v5Mrvi+UnxZAu/U+/on3c0zT9abo7DpPlf5+XIc7V18PgocmPOo6cZCi51WI+fGbmhvC7+jtXMA0h6e/5C/Q1Pw8aWeahn3w93zoWfOeUTd8xoE9iOQ/8/fy7XAYzgC58OhXj9s64d6X9/f7471D6CfROwyA/v1YXt33OyOh/f7bb29/eb2j/vb98fdvi5/X7vbzUv2tXNtch074rNx8uyclGd9Ech/YlmnyyvDs4/SnpMrBuSCE+OTDmUubLpz2pk6edaQ5dv3B00fI/MywZM9xtHC38t4SV2MIwL53CvgnMjzgfx8odifg/0ObmUOv88yRT5T5F1+Yv8Q1630fer/wU82Qb+cQ2xcO66uPwP86RPfDTMAAA==",
  "debug_symbols": "pZbdTuMwEEbfJde5sMce//AqqEKlBFQpSqvQrrRCfff1ZOYL7EpFKHvTc0qY4wbiJh/dy/B8fXs6Tq+n9+7h8aN7no/jeHx7Gk+H/eV4mtpPPzonLzF0D77vYlSwIimyoijqAnYKryCFVlgrrBXWCmuFtcJaSa1CDV5BilaJDVHBiqTIiqKoC7JTeAUptJK1krWStZK1kluFG+qC4hReQYqgiApWJEVWaKW0Suq76hReQYqgiApWJEVWFIVWvHNGb2yhLAzGlipCNiZjNhZjVXpn9EYyBqP1fOtVYTJmYzFWJTmjN5IxGKPRemQ9sh7JZeBEqkmQC8qLeAhBAiRCGJIgGVIg1SSiHKVMIgQJkAhhSIJkSIFUk2UTLIIyo8woL5shiDBEylEkQwqkmsjGUPEQggRIhDBEyiySIQVSTWSzqHgIQQIkQhiCckY5o5xRLigXlAvKBeWCckG5oFxQLigXlCvKFeWKckW5olytTLJ3fBKRQ1lE1ioiGVIg1UR2ioqHECRAIoQhKHuUPcqyZXy75kn2jIqHECRAWpmcCEMSJENambxINZG9o+IhBAmQCGGIlP3t1ne4Hzxd5mGQ28GXG0S7bZz38zBduofpOo5992s/Xpdfej/vp4WX/dyOto82TC+NLfh6HAexW/857e6Ptl1nw23breP88/mcMF940zyt83fXD/fnibE+JdowH1Kw+ZDKlvn1/EPOG+ZjqDYfY9wyH7F+ZL9lntf1k9swz4SLj4k3zWfMhy3/P47r+nHL+ScXbT65umVebm8677dcv4nW9WnL/qH185PbNP+T/fPdPBXMh03zYZ2P4f/Wv79/vpv36/n/8/fftXf7w3H+65H9JqX5uH8eB3v7ep0OX45efp9xBI/85/l0GF6u8yClz+f+9vJI7HvKtOu7dq94DK6PbiePjnKofTG0U5K3Xt6272mKeXeTD/YH",
  "file_map": {
    "50": {
      "source": "struct bar {\n    enable: [bool; 4],\n    data: [Field; 2],\n    pad: u32,\n}\n\nfn main(enable: [Field; 2]) -> pub [Field; 4] {\n    let mut result = [0; 4];\n    let a: [_; 4] = foo(enable[1]);\n    for i in 0..4 {\n        result[i] = a[i].data[i % 2];\n    }\n    result\n}\n\nfn foo(x: Field) -> [bar; 4] {\n    [\n        bar { enable: [true, true, false, false], data: [x, x + 1], pad: 0 },\n        bar { enable: [true, false, false, false], data: [x + 2, x + 7], pad: 0 },\n        bar { enable: [true, true, false, true], data: [x + 3, x + 5], pad: 0 },\n        bar { enable: [false, false, false, false], data: [x + 4, x - 1], pad: 0 },\n    ]\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
